Changed system support

--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,7 @@
     "toolchain-gccarmnoneeabi": [
         {
           "sha1": "7209e8b7d8b1988cbc182f370fde3508a6a1580b", 
-          "system": [
-			"windows", 
-			"windows_amd64", 
-			"windows_x86"
-		  ], 
+          "system": "*", 
           "url": "https://www.dropbox.com/s/4cn2269qhoz7h3l/toolchain-gccarmnoneeabi.tar.gz?dl=1", 
           "version": "1.50301.0"
         }
